Added in the lesson plans

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,16 @@ See you in Krakow!!
 
 See a hands-on demonstration using real data and learn to use the open-source statistical programming software R (https://www.r-project.org/) for data management, visualization, and analysis. Statistical management can get expensive. Learning this open-source software helps researchers everywhere keep their costs down while still allowing them to make significant contributions to the body of mercury science.
 
+## Lesson Plans
+
+Thank you for attending out workshop.  We hope that you learned some new things and are excited to continue developing your skills in R.  Below are the notes from our lesson plans for your future reference.
+
+[Lesson 1 - Data Management](https://htmlpreview.github.io/?https://github.com/cgeger/ICMGP2019/blob/master/Lesson-1-data-management.html)
+
+[Lesson 2 - Statistics](https://htmlpreview.github.io/?https://github.com/cgeger/ICMGP2019/blob/master/Lesson-2---Statistics.html)
+
+[Lesson 3 - Visualization](https://htmlpreview.github.io/?https://github.com/cgeger/ICMGP2019/blob/master/Lesson-3-visualization.html)
+
 ## Additional R Resources
 
  - [YaRrr! The Pirate’s Guide to R](http://nathanieldphillips.com/thepiratesguidetor/)
